--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,12 +54,12 @@ jobs:
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
-          TZ: America/Los_Angeles
+          TZ: Australia/Melbourne
         run: |
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/site"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
