--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+
+# Hugo gitignores
+/site/resources/
+/site/public/
+/site/themes/
+.hugo_build.lock
