--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -60,6 +60,7 @@ jobs:
             --gc \
             --minify \
             --source ./site \
+            --destination ./public \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
