--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -48,7 +48,6 @@ enableEmoji = true
       link = 'https://github.com/commitconfirmed'
 
 [menu]
-
   [[menu.main]]
     identifier = "post"
     name = "Posts"
@@ -65,3 +64,7 @@ enableEmoji = true
 category = "categories"
 tag = "tags"
 series = "series"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
