--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "site/themes/tailwind"]
 	path = site/themes/tailwind
 	url = https://github.com/tomowang/hugo-theme-tailwind.git
+[submodule "site/themes/blowfish"]
+	path = site/themes/blowfish
+	url = https://github.com/nunocoracao/blowfish.git
+	branch = main
