--- a/site/config/_default/hugo.toml
+++ b/site/config/_default/hugo.toml
@@ -16,7 +16,7 @@ buildFuture = false
 
 enableEmoji = true
 
-# googleAnalytics = "G-TMR5HQPCWP"
+googleAnalytics = "G-TMR5HQPCWP"
 
 [pagination]
   pagerSize = 100
