--- a/site/config/_default/menus.en.toml
+++ b/site/config/_default/menus.en.toml
@@ -11,9 +11,19 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
+  name = "Posts"
   pageRef = "posts"
   weight = 10
+
+[[main]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 20
+
+[[main]]
+  name = "NPA Showcases"
+  pageRef = "npa-showcases"
+  weight = 30
 
 #[[main]]
 #  name = "Parent"
@@ -47,10 +57,7 @@
 #  pageRef = "categories"
 #  weight = 20
 
-#[[main]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 30
+
 
 
 # -- Footer Menu --
@@ -58,10 +65,15 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+  name = "About"
+  pageRef = "about"
+  weight = 10
+
+[[footer]]
+  name = "CV"
+  pageRef = "cv"
+  weight = 10
 
 # [[footer]]
 #   name = "Categories"
