A few style tweaks and a new post (basic-nornir)

--- a/site/config/_default/hugo.toml
+++ b/site/config/_default/hugo.toml
@@ -67,3 +67,7 @@ googleAnalytics = "G-TMR5HQPCWP"
       name = 'fragmentrefs'
       type = 'fragments'
       weight = 10
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
